Added setNearClipDistance and setFarClipDistance functions into View.java

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Documents and Settings\\SLi\\.netbeans\\7.0\\build.properties
+user.properties.file=C:\\Documents and Settings\\MMascaro\\.netbeans\\7.0\\build.properties
