--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,15 +29,15 @@ file.reference.gdal.jar=gdal.jar
 file.reference.gluegen-rt.jar=gluegen-rt.jar
 file.reference.jogl.jar=jogl.jar
 file.reference.plugin.jar=C:\\Program Files\\Java\\jre6\\lib\\plugin.jar
-file.reference.worldwind.jar=worldwind.jar
+file.reference.worldwind.jar=dist\\worldwind.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gdal.jar}:\
     ${file.reference.gluegen-rt.jar}:\
     ${file.reference.jogl.jar}:\
-    ${file.reference.worldwind.jar}:\
-    ${file.reference.plugin.jar}
+    ${file.reference.plugin.jar}:\
+    ${file.reference.worldwind.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,7 +70,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
+run.jvmargs=-Djava.security.policy=applet.policy
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
